tests/testcases/errors/BCE0063-4.boo
"""
BCE0063-4.boo(9,9): BCE0063: No enclosing loop out of which to break or continue.
"""
i = 0
while i < 3:
	f = def ():
		while true:
			break
		continue
	++i
